# PyBuenColors

./: .gitignore  404.html  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
docs/examples/: helpers_demo.ipynb  index.md  palettes_demo.ipynb  single_cell_demo.ipynb
examples/: README.md  helpers_demo.ipynb  index.html  palettes_demo.ipynb  single_cell_demo.ipynb
examples/helpers_demo/: index.html
examples/palettes_demo/: index.html
examples/single_cell_demo/: index.html
reference/: index.html
reference/buencolors/: index.html
scripts/: generate_examples.py  generate_single_cell_figure.py
search/: search_index.json
src/buencolors/: __init__.py  helpers.py  single_cell.py
src/buencolors/styles/: pretty-plot.mplstyle
tests/: conftest.py
